2007-08-10  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/chrome/skin/compzilla.css: Handle ARGB windows
	correctly by setting the background-color transparent for
	.windowContent children of .uiDlgContentCenter.  This makes
	cairo-clock look good.

	* compzilla/chrome/skin/flickrdemo.css: Remove backgroung
	transparency on #flickrWindow.

	* compzilla/src/compzillaControl.cpp (Filter): Don't be picky
	about ungrab notification: always reenable the overlay input.
	This should hopefully fix the occasional loss of input, where
	ungrab notification isn't sent to the root window.

2007-08-09  Alex Graveley  <alex@beatniksoftware.com>

	Add a simple window resize cache to avoid pipelining multiple
	XConfigureWindow calls before a ConfigureNotify arrives for the
	last one.

	* compzilla/src/compzillaWindow.cpp (Configured): Call
	SendPendingResize.
	(SendPendingResize): Send the pending resize since the last
	ConfigureNotify, or reset mIsResizePending if we're already at the
	requested size.
	(QueueResize): Set the requested size, and if a resize isn't
	already pending, call SendPendingResize to send it.

	* compzilla/src/compzillaControl.cpp (Configure): Call QueueResize
	if the window is known.

2007-08-03  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/src/compzillaControl.cpp: Clean this up, and remove
	all the helper functions, calling compzillaWindow methods
	directly.  Store the DOM window as an X window instead of
	GdkWindow.
	(GetEventXWindow): New, returns the window an X event operates on.

2007-08-01  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/src/compzillaControl.cpp (PrintEvent): Fix crash
	caused by printing a pointer as %s, use 0x%0x instead of %p while
	we're here.

2007-08-01  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/src/compzillaControl.cpp (GetNativeWidget): Don't use
	nsIScriptGlobalObject/nsPIDOMWindow to get the docshell, use the
	nsIWebNavigation instead.
