@@ -1,3 +1,9 @@
+2007-08-11  Alex Graveley  <alex@beatniksoftware.com>
+
+	Fix minefield build:
+	* compzilla/src/compzillaRenderingContext.cpp: Include nsMemory.h.
+	* compzilla/src/compzillaRenderingContext.h: Include nsIFrame.h.
+
 2007-08-10  Alex Graveley  <alex@beatniksoftware.com>
 
 	* compzilla/chrome/skin/compzilla.css: Handle ARGB windows
